checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000296716.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#37: 
In file included from /home/wangcong/projects/linux-2.6/arch/um/kernel/smp.c:9:

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#37: 
In file included from /home/wangcong/projects/linux-2.6/arch/um/kernel/smp.c:9:

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#38: 
include2/asm/tlb.h: In function ¡®tlb_remove_page¡¯:
                                ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#39: 
include2/asm/tlb.h:101: error: implicit declaration of function ¡®page_cache_release¡¯
                                                                ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000296716.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 2 warnings, 2 checks, 7 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000296716.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
